feat:update verification emails styles and send on real emails

--- a/.env.example
+++ b/.env.example
@@ -18,15 +18,10 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-
-
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=29006b9432feb8
-MAIL_PASSWORD=0749c196701c47
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=tikootarashvili@redberry.ge
-MAIL_FROM_NAME="${APP_NAME}"
-
-
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=****
+MAIL_PASSWORD=****
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_NAME=Newsletter
